[package]
name = "kafka-to-bwhc"
version = "0.1.0"
edition = "2021"
description = "Sends request to bwHC-Backend, awaits response and sends it back"

[dependencies]
log = "0.4"
simple_logger = "4.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rdkafka = { version = "0.33", features = [ "cmake-build", "libz-static" ] }
reqwest = { version = "0.11", features = [ "rustls-tls" ], default-features = false }
tokio = { version = "1.29", features = ["default", "macros"] }

[profile.release]
opt-level = "s"
codegen-units = 1
lto = "thin"
strip = true
panic = "abort"